# mrunner

./: .cgcignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  components.json  doppler.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.claude/skills/prepare-release/: SKILL.md
.claude/skills/prepare-release/references/: semver.md
.claude/skills/tauri/: SKILL.md
.claude/skills/tauri/references/: commands_and_ipc.md  configuration.md  distribution.md  security_and_permissions.md  state_and_plugins.md  ui_patterns.md
.github/workflows/: release.yml  tag-release.yml
apps/launcher/: Cargo.toml  tauri.conf.json
apps/launcher/capabilities/: default.json
apps/launcher/icons/: icon.icns
apps/launcher/src/: bookmarks.rs  chrome.rs  github.rs  lib.rs  main.rs  platform.rs  plugins.rs  sentry.rs  shortcuts.rs  tools.rs
apps/renderer/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/renderer/src/: App.tsx  i18next.d.ts  index.css  main.tsx
apps/renderer/src/commands/: apps.ts  files.ts  index.ts  types.ts
apps/renderer/src/components/: command-footer.tsx  error-boundary.tsx  language-selector.tsx  list-item.tsx  update-banner.tsx
apps/renderer/src/components/ai-chat/: ai-chat-view.tsx  directory-picker.tsx  index.ts  tool-not-installed-card.tsx
apps/renderer/src/components/bookmark/: bookmark-actions.tsx  bookmark-delete.tsx  bookmark-dialog.tsx
apps/renderer/src/components/command-palette/: add-bookmark-button.tsx  bookmark-list.tsx  index.ts  (+3 more)
apps/renderer/src/core/: index.ts
apps/renderer/src/hooks/: index.ts  use-ai-chat.ts  use-ai-models.ts  use-bookmark-actions.ts  use-bookmark-search.ts  use-bookmark-tags.ts  use-bookmarks.ts  use-chrome-profiles.ts  use-command-data.ts  use-commands.ts  use-dialog-manager.ts  use-folder-settings.ts  use-keyboard-shortcuts.ts  use-locale.ts  use-platform.ts  use-plugins.ts  use-shortcuts-settings.ts  use-slash-commands.ts  use-updater.ts  use-window-manager.ts
apps/renderer/src/lib/: config-file.ts  constants.ts  execute-plugin-action.ts  hotkey-adapter.ts  i18n.ts  logger.ts  parse-query.ts  plugin-environment.ts  sentry.ts
apps/renderer/src/locales/: en.json  pt-BR.json
apps/renderer/src/pages/: Settings.tsx  settings.tsx  setup.tsx
apps/renderer/src/test/: setup.ts
docs/plans/: 2026-03-08-tauri-plugin-log.md  2026-03-09-plugin-system-design.md
plugins/: README.md  example.json  registry.json
release/: bump-version.sh  publish-aur.sh  release-it.json
release/aur/: PKGBUILD
scripts/: install.sh  uninstall.sh
scripts/ralph/: .gitignore  CLAUDE.md  prd.json  progress.txt  ralph.sh
scripts/ralph/archive/2026-03-08-ask-tool/: prd.json  progress.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: buku.rs  lib.rs
src/commands/: apps.ts  files.ts  index.ts  types.ts
src/components/: error-boundary.tsx  index.ts
src/components/bookmark/: bookmark-actions.tsx  bookmark-delete.tsx  bookmark-dialog.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  select.tsx  separator.tsx  textarea.tsx
src/hooks/: index.ts  use-buku.ts  use-commands.ts  use-plugins.ts
src/lib/: constants.ts  i18n.ts
(+23 files in other folders)
