[workspace]
resolver = "2"
members = ["apps/launcher", "packages/bookmarks"]

[workspace.package]
version = "0.0.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/mnzsss/mrunner"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
open = "5"
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
