[package]
name = "mrunner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A custom command launcher"

[lib]
name = "mrunner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
bookmarks = { path = "../../packages/bookmarks" }
shell-words = "1.1"
chrono = "0.4"
native-dialog = "0.7"
sentry = { version = "0.46", default-features = false, features = ["panic", "backtrace", "contexts", "reqwest", "rustls"] }
