[package]
name = "mrunner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A custom command launcher"

[lib]
name = "mrunner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
log = "0.4"
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tokio = { version = "1", features = ["process", "time", "io-util", "rt", "macros", "rt-multi-thread"] }
bookmarks = { path = "../../packages/bookmarks" }
shell-words = "1.1"
chrono = "0.4"
native-dialog = "0.7"
sentry = { version = "0.46", default-features = false, features = ["panic", "backtrace", "contexts", "reqwest", "rustls"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gdkx11 = "0.18"
glib = "0.18"
x11-dl = "2.21"
